# Dis-C-ord

./: .gitignore  CMakeLists.txt  Makefile  README.md  thread_module.c
client/: client.c
client/include/: gui_add_user.h  gui_main.h
client/src/: gui_add_user.c  gui_main.c  main.c
database/: init.sql
server/: server.c  thread_module.c  thread_module.h
